# s-hwe-m-m

./: config.py  cookies  pyproject.toml  render.md  render.yaml  setup
maythusharmusic/: __main__.py
maythusharmusic/cookies/: cookies.txt
maythusharmusic/plugins/bot/: clone.py
maythusharmusic/plugins/clone_plugins/: auth.py  autojoin.py  ban.py  callback.py  gban.py  help.py  init.py  inline.py  loop.py  lyrics.py  pause.py  play.py  playmode.py  protection.py  reload.py  resume.py  seek.py  settings.py  shuffle.py  skip.py  songs.py  speed.py  start.py  stop.py
maythusharmusic/plugins/misc/: send.py
maythusharmusic/plugins/play/: play.py  playlist.py
maythusharmusic/plugins/tools/: calculator
maythusharmusic/utils/database/: database.py
strings/: __init__.py
